[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Prototype.gd" type="Script" id=1]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Levels/Level 4Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://Health/Lives.tscn" type="PackedScene" id=4]

[node name="LevelProt" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ViewportContainer" type="ViewportContainer" parent="GridContainer"]
margin_right = 1920.0
margin_bottom = 538.0

[node name="Viewport" type="Viewport" parent="GridContainer/ViewportContainer"]
size = Vector2( 1920, 538 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="GridContainer/ViewportContainer/Viewport"]
current = true

[node name="Level" parent="GridContainer/ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="Player1" parent="GridContainer/ViewportContainer/Viewport/Level" index="1"]
selecLives = NodePath("../../../HUDP1/LivesP1")

[node name="Player2" parent="GridContainer/ViewportContainer/Viewport/Level" index="2"]
selecLives = NodePath("../../../../ViewportContainer2/HUDP2/LivesP2")

[node name="HUDP1" type="CanvasLayer" parent="GridContainer/ViewportContainer"]

[node name="LivesP1" parent="GridContainer/ViewportContainer/HUDP1" instance=ExtResource( 4 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="GridContainer"]
margin_top = 542.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Viewport" type="Viewport" parent="GridContainer/ViewportContainer2"]
size = Vector2( 1920, 538 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="GridContainer/ViewportContainer2/Viewport"]
position = Vector2( 0, 4 )
current = true

[node name="HUDP2" type="CanvasLayer" parent="GridContainer/ViewportContainer2"]

[node name="LivesP2" parent="GridContainer/ViewportContainer2/HUDP2" instance=ExtResource( 4 )]
position = Vector2( 0, 540 )

[node name="GUI" parent="." instance=ExtResource( 2 )]

[editable path="GridContainer/ViewportContainer/Viewport/Level"]
